--- a/.gitignore
+++ b/.gitignore
@@ -135,6 +135,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.python-version
 
 # Spyder project settings
 .spyderproject
@@ -165,7 +166,7 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
 
 # Ruff stuff:
 .ruff_cache/
@@ -177,3 +178,29 @@ cython_debug/
 .solutions.md
 
 challenge_2_ai.py
+
+# VS Code
+.vscode/
+
+# Database files
+*.db
+*.sqlite3
+
+# API keys and secrets
+.env.local
+.env.development
+.env.production
+
+# Logs
+logs/
+*.log.*
+
+# Downloads folder from multi-threaded download exercise
+downloads/
+
+# macOS
+.DS_Store
+
+# Windows
+Thumbs.db
+desktop.ini
